# InfraTrack

./: .gitignore  README.md  detect_mal_url.py  domain_lkup_summary.py  infratrack.py  ip_domain_info.py  ip_lkup_summary.py  ipaddr_summary.py  new_reg_domain.py  pyproject.toml  riskiq_api_lookup.py  shodan_censys_scan.py
core/: args.py  logs.py
infratrack/: CN_Targets.txt  apac_focus.txt  apac_focus.txt_matches.txt  cn_five_poison.txt_matches20Aug.txt  criminal_ip_api_request.py  domain_lkup_summary.py  domain_lookup.py  domain_summary.py  infratrack.py  ip_address_lookup.py  ip_lkup_summary.py  new_reg_domains.py  random_queries.txt  riskiq_api_lookup.py  shodan_censys_scan.py  tech_focus_queries.txt
infratrack/censys/: Brute Ratel C2 HTTP_2022-08-07.json
infratrack/core/: logs.py
infratrack/shodan/: Empire Faked IIS7 Default Page_2022-07-07.json
infratrack/sigs/: shodan_censys
infratrack/sigs/frameworks/: alan_framework_c2.json  brute_ratel_c2_http.json  deimosc2_http.json  empire_html_hash.json  mythic_c2_ssl.json  pantegana_rat_def_cert.json  poshc2_ssl.json  pupyrat_cert_names.json  sliver_c2_http_headers.json
infratrack/sigs/malware_families/: plugx_http_headers.json
sigs/: Shodan_Censys.yml
